--- a/public/css/style.css
+++ b/public/css/style.css
@@ -786,7 +786,8 @@ input { /*override default styles*/
     transform: translateX(-50%);
     width: 100%;
     text-align: center;
-    z-index: 1000000
+    z-index: 1000000;
+    padding-bottom: 40px;
 }
 
 .homemenu {
@@ -805,7 +806,7 @@ input { /*override default styles*/
 .homemenu-bg {
     position: absolute;
     top: 0;
-    bottom: 0;
+    height: calc(100% - 60px);
     opacity: 0.9;
     width: 490px;
     background: var(--night);
