--- a/public/css/userprofile.css
+++ b/public/css/userprofile.css
@@ -16,66 +16,150 @@ body {
 
 .u-banner-content {
     position: absolute;
-    top: 50px;
-    left: 50px;
+    top: 40px;
+    left: 100px;
     width: 500px;
-    text-align: center;
+    text-align: left;
     color: var(--light);
     display: inline-block;
 }
 
-.user_body{
+.u-body{
     color: white;
     padding: 20px;
 }
 
-/*Stuff for badges array*/
-.user_avatar-frame {
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    border: 5px solid #fc0320;
+.u-username-big {
+    font-size: 60px;
     display: inline-block;
-    -webkit-box-shadow: 0px 0px 4px 2px #3B3B3B; 
-    box-shadow: 0px 0px 4px 2px #3B3B3B;
-    overflow: hidden;
-}
-
-.badges{
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    min-height: 100vh;
-    background: #dcdcdc;
-}
-
-.container{
-    position: relative;
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 20px;
-    padding: 20px;
-}
-
-.container .card{
-    width: 100%;
-    background: #fff;
-}
-
-.container .card .imgBx{
-    position: relative;
-    width: 100%;
-    height: 310px;
-    overflow: hidden;
-}
-
-.container .card .imgBx img{
     position: absolute;
-    top:0;
-    left:0;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    margin-left: 20px;
+    margin-right: 10px;
+    font-weight: bold;
+    text-shadow: 0px 0px 12px #0f0f0f;
+}
+
+.u-playerstats {
+    width: calc(100% - 180px);
+    margin-left: 90px;
+    margin-right: 90px;
+    font-size: 22px;
+    padding-bottom: 30px;
+    border-bottom: 2px solid var(--medium);
+}
+
+.u-playerstats-stat {
+    display: inline;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-bottom: 15px;
+}
+
+.u-playerstats-stat:not(:last-child) {
+    border-right: 2px solid var(--medium);
+    padding-right: 40px;
+}
+
+.u-playerstats-stat:not(:first-child) {
+    padding-left: 40px;
+}
+
+.u-playerstats-stat:first-child {
+    padding-left: 15px;
+}
+
+.u-playerstats-stat:last-child {
+    padding-right: 15px;
+}
+
+.u-avatar-frame {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border: 5px solid red;
+    display: inline-block;
+    -webkit-box-shadow: 0px 0px 12px 4px #292929;
+    box-shadow: 0px 0px 12px 4px #292929;
+    overflow: hidden;
+    background: #de4343;
+}
+
+/*Stuff for badges array*/
+.u-badge {
+    background: #474747;
+    width: 250px;
+    height: 350px;
+    -webkit-box-shadow: 0px 0px 12px 2px #0A0A0A; 
+    box-shadow: 0px 0px 12px 2px #0A0A0A;
+    border-radius: 10px;
+}
+
+.u-badge-title {
+    margin-top: 30px;
+    font-weight: bold;
+    margin-left: 100px;
+    font-size: 22px;
+    margin-bottom: 10px;
+}
+
+.u-container {
+    position: relative;
+    width: calc(100% - 200px);
+    display: grid;
+    grid-template-columns: repeat(auto-fit, min(250px));
+    gap: 30px 30px;
+    padding: 10px;
+    padding-left: 100px;
+    transition: 0.3s;
+    overflow: hidden;
+}
+
+.u-badge-img {
+    width: 100px;
+    height: 100px;
+}
+
+.u-badge-icon {
+    margin-top: 20px;
+    display: block;
+    text-align: center;
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: 0.5s ease-in-out
+    height: 100px;
+}
+
+.u-badge-level {
+    margin-top: 10px;
+    padding: 2px;
+    border-radius: 8px;
+    color: var(--light);
+    width: auto;
+    font-size: 15px;
+    padding-left: 8px;
+    padding-right: 8px;
+}
+
+.u-badge-card-title {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 20px;
+    text-align: center;
+    font-weight: bold;
+    margin-top: -5px;
+}
+
+.u-badge-card-awarded {
+    font-size: 15px;
+    color: var(--medium);
+    padding-left: 2px;
+    margin-left: 8px;
+    border-left: 1px solid var(--medium)
+}
+
+.u-badge-card-description {
+    margin-top: 5px;
+    overflow: auto;
+    height: 140px;
 }
