--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1872,8 +1872,65 @@ input { /*override default styles*/
     position: relative;
     margin: auto;
     max-width: 370px;
-    width: calc(100% - 20px);
-    border-radius: 10px;
+    width: calc(100% - 100px);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     padding: 10px;
     text-align: left;
+}
+
+.my_profile {
+    font-size: 17px;
+    color: var(--light);
+    text-decoration: none;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.my_profile:visited {
+    color: var(--light);
+    text-decoration: none;
+}
+
+.my_profile:hover {
+    font-size: 17px;
+    color: var(--light-darker);
+    text-decoration: none;
+}
+
+.my_stats {
+    background: #3f3f3f;
+    margin: auto;
+    max-width: 370px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    padding: 10px;
+    width: calc(100% - 100px);
+    font-size: 17px;
+}
+
+.ms_medals {
+    width: 25px;
+    height: auto;
+    margin-bottom: -7px;
+    margin-right: 4px;
+}
+
+.ms_badges {
+    width: 25px;
+    height: auto;
+    margin-bottom: -7px;
+    margin-right: 4px;
+}
+
+.ms_stat_one {
+    border-right: 2px solid var(--light);
+    padding-right: 10px;
+    margin-right: 7px;
+}
+
+.mp_settings {
+    padding-left: 8px;
+    margin-left: 5px;
+    border-left: 2px solid var(--light);
 }
