--- a/public/css/settingspage.css
+++ b/public/css/settingspage.css
@@ -2,6 +2,30 @@ body {
     background: #212121;
 }
 
+@media (max-width: 580px) {
+    .s-player-name {
+        font-size: 40px !important;
+    }
+}
+
+@media (max-width: 470px) {
+    .s-player-name {
+        font-size: 30px !important;
+    }
+}
+
+@media (max-width: 410px) {
+    .s-player-name {
+        margin-left: 5px !important;
+    }
+}
+
+@media (max-width: 360px) {
+    .s-player-name {
+        font-size: 25px !important;
+    }
+}
+
 .s-main {
     max-width: 900px;
     margin: auto;
@@ -43,16 +67,16 @@ body {
 .s-player-name {
     font-size: 60px;
     display: inline-block;
-    position: absolute;
+    position: relative;
     top: 50%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     margin-left: 25px;
     margin-right: 10px;
+    margin-top: 30px !important;
     font-weight: bold;
     text-shadow: 0px 0px 12px #0f0f0f;
     margin-top: -90px;
-    float: left;
 }
 
 .s-divider {
