--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1056,6 +1056,7 @@ input { /*override default styles*/
     width: 200px;
     height: 10px;
     background: var(--medium);
+    white-space: nowrap;
 }
 
 .s-territories-bar-inner {
@@ -1063,6 +1064,18 @@ input { /*override default styles*/
     height: 100%;
     background: var(--green);
     transition: 0.3s;
+    display: inline-block;
+    position: relative;
+    top: -7px;
+}
+
+#territoryprogress:after {
+    content: "";
+    display: block;
+    border-right: 1px solid #fff;
+    height: 16px;
+    left: -10px;
+    margin-top: -3px;
 }
 
 .endscreen-inner {
