--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1648,6 +1648,37 @@ input { /*override default styles*/
     pointer-events: none;
 }
 
+.powerups-nuke {
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    transition: 1.5s;
+    pointer-events: none;
+    opacity: 0;
+}
+
+.powerups-shockwave {
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    pointer-events: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: none;
+    box-shadow: none;
+    -webkit-box-shadow: inset 0px 0px 10px 5px rgba(228,228,228);
+    box-shadow: inset 0px 0px 10px 5px rgba(228,228,228);
+    border: 5px solid var(--light-darker);
+    transition: all 2.5s, opacity 1.5s;
+    opacity: 0;
+    position: absolute;
+}
+
 .powerup-btn {
     position: relative;
     background: none;
@@ -1659,17 +1690,18 @@ input { /*override default styles*/
     cursor: pointer;
     margin-bottom: 6px;
     float: right;
+    margin-left: 15px;
 }
 
 .powerup-btn:hover {
     border: 2px solid var(--light);
-    margin-left: -2px;
     margin-right: -2px;
 }
 
 .powerup-btn img {
     width: 50px;
     height: 50px;
+    margin-top: 3px;
 }
 
 .powerup-btn-bg {
@@ -1719,7 +1751,8 @@ input { /*override default styles*/
     overflow: hidden;
     border-radius: 8px;
     position: relative;
-    margin: -5px
+    margin: -5px;
+    max-height: 55px;
 }
 
 .l-stats {
