--- a/public/css/style.css
+++ b/public/css/style.css
@@ -939,6 +939,12 @@ input { /*override default styles*/
     z-index: 2999999;
     bottom: 20px;
     right: 0px;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    pointer-events: none;
 }
 
 .notification {
@@ -1723,6 +1729,7 @@ input { /*override default styles*/
     opacity: 0.9;
     padding: 5px;
     border-radius: 10px;
+    pointer-events: none;
 }
 
 .powerup-recharge {
