add new settings and bot fixes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2379,3 +2379,8 @@ input { /*override default styles*/
         border-color: #fff transparent #fff transparent;
     }
 }
+
+.mapcontainer {
+    transform: translateZ(0);
+    /*shape-rendering: optimizeSpeed;*/
+}
