--- a/public/css/settingspage.css
+++ b/public/css/settingspage.css
@@ -234,3 +234,71 @@ body {
 #lc-exit:hover {
     color: var(--light-darker);
 }
+
+.s-devicesettings {
+    margin-top: 25px;
+}
+
+.s-area-info {
+    font-size: 14px;
+}
+
+.settingstoggle {
+    margin-right: 5px;
+    font-size: 16px;
+    position: relative;
+    display: inline-block;
+    width: 48px;
+    height: 28px;
+    vertical-align: middle;
+}
+
+.settingstoggle input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(124, 124, 124);
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 34px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 50%;
+}
+
+.settingstoggle input:checked+.slider {
+    background-color: var(--green);
+}
+
+.settingstoggle input:focus+.slider {
+    box-shadow: 0 0 1px var(--green);
+}
+
+.settingstoggle input:checked+.slider:before {
+    -webkit-transform: translateX(20px);
+    -ms-transform: translateX(20px);
+    transform: translateX(20px);
+}
+
+.s-ds-setting {
+    margin-top: 15px;
+}
