--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2384,3 +2384,42 @@ input { /*override default styles*/
     transform: translateZ(0);
     /*shape-rendering: optimizeSpeed;*/
 }
+
+.spectatingbar {
+    position: fixed;
+    z-index: 69420;
+    bottom: 20px;
+    height: 80px;
+    background: none;
+    width: 250px;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 10px;
+    display: none;
+}
+
+.spectatingbar-bg {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    opacity: 0.8;
+    width: 100%;
+    background: var(--dark);
+    border-radius: 10px;
+    z-index: -1;
+}
+
+.spec-inner {
+    text-align: center;
+    color: var(--light);
+    padding: 10px;
+}
+
+.spec-title {
+    font-weight: bold;
+    font-size: 19px;
+}
+
+.spec-leave {
+    margin-top: 5px !important;
+}
