prototype for versatile player stats tracker (somewhat works)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1644,7 +1644,7 @@ input { /*override default styles*/
     pointer-events: none;
 }
 
-.powerups-parachute {
+.powerups-parachute, .powerups-supplycrate {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
