--- a/public/css/settingspage.css
+++ b/public/css/settingspage.css
@@ -42,8 +42,8 @@ body {
     margin-top: 50px;
     color: var(--light);
     background: var(--dark);
-    -webkit-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.8); 
-    box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.8);
+    -webkit-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.8);
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.8);
     margin-bottom: 60px;
 }
 
@@ -248,12 +248,15 @@ body {
     font-size: 16px;
     position: relative;
     display: inline-block;
-    width: 48px;
     height: 28px;
     vertical-align: middle;
 }
 
-.settingstoggle input {
+.switch {
+    width: 48px;
+}
+
+.switch input {
     opacity: 0;
     width: 0;
     height: 0;
@@ -285,15 +288,15 @@ body {
     border-radius: 50%;
 }
 
-.settingstoggle input:checked+.slider {
+.switch input:checked+.slider {
     background-color: var(--green);
 }
 
-.settingstoggle input:focus+.slider {
+.switch input:focus+.slider {
     box-shadow: 0 0 1px var(--green);
 }
 
-.settingstoggle input:checked+.slider:before {
+.switch input:checked+.slider:before {
     -webkit-transform: translateX(20px);
     -ms-transform: translateX(20px);
     transform: translateX(20px);
@@ -301,4 +304,31 @@ body {
 
 .s-ds-setting {
     margin-top: 15px;
+}
+
+.DSslider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;
+    background: var(--medium);
+    outline: none;
+    -webkit-transition: .2s;
+    transition: .2s;
+}
+
+.DSslider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    background: var(--green);
+    cursor: pointer;
+}
+
+.DSslider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: var(--green);
+    cursor: pointer;
 }
